test/functions/deitz/test_inout_const.good
test_inout_const.chpl:9: error: Assigning to a constant expression
